[gd_scene load_steps=4 format=3 uid="uid://dg1u3mmg7n721"]

[ext_resource type="Script" path="res://Plant.gd" id="1_2omu1"]
[ext_resource type="Texture2D" uid="uid://xhc6hoo56ljs" path="res://assets/plant/plant1.png" id="1_wkky1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_efukp"]
radius = 24.0
height = 96.0

[node name="Plant" type="RigidBody2D" groups=["plants"]]
freeze = true
script = ExtResource("1_2omu1")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -6)
texture = ExtResource("1_wkky1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_efukp")

[node name="PoatoInformation" type="Label" parent="."]
offset_right = 187.0
offset_bottom = 26.0
text = "Harvest only one potato"

[node name="ShowMessageTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ShowMessageTimer" to="." method="_on_show_message_timer_timeout"]
